--- a/configuration/marlow-atm-service.yml
+++ b/configuration/marlow-atm-service.yml
@@ -2,7 +2,7 @@ spring:
   datasource:
     # initialization-mode: never 
     initialization-mode: always 
-    url: jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:8889}/banking_core_service_new?enabledTLSProtocols=TLSv1.2
+    url: jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:8889}/banking_core_service_new
     username: root
     password: root
   jpa:
