--- a/configuration/marlow-atm-service.yml
+++ b/configuration/marlow-atm-service.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
-    initialization-mode: never 
+    initialization-mode: always 
     # initialization-mode: always 
-    url: jdbc:mysql://localhost:8889/banking_core_service_new?enabledTLSProtocols=TLSv1.2
+    url: jdbc:mysql://localhost:8889/banking_core_service?enabledTLSProtocols=TLSv1.2
     username: root
     password: root
   jpa:
